fixed "about" section "can" spacing issue in laptop

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -602,7 +602,7 @@ template {
   .cans .col-xl-3 {
     padding-left: 0px;
     padding-right: 0px;
-    transform: scale(0.75);
+    transform: scale(0.75) !important;
   }
 
   .cans .bg-text, .about-title {
@@ -630,7 +630,7 @@ template {
   .cans .col-xl-3 {
     padding-left: 50px;
     padding-right: 50px;
-    transform: scale(1);
+    transform: scale(1) !important;
   }
 }
 
